Fix bug z-index videocall

--- a/src/layouts/components/Sidebar/Sidebar.module.scss
+++ b/src/layouts/components/Sidebar/Sidebar.module.scss
@@ -5,7 +5,7 @@
     bottom: 0;
     width: var(--default-sidebar-width);
     padding: 16px 32px;
-    z-index: 1030;
+   
 
     .logo {
         display: flex;
